--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 </head>
 <body>
-<%= render "shared/navbar" %>
-<%= yield %>
-
+  <%= render "shared/navbar" %>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
