--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,27 +1,35 @@
-<div class="cover">
-  <h1>Cocktails</h1>
+<div class="cover" >
+  <h2><%= @cocktails.length%> cocktails recipies for cocktails addicts</h2>
+  <%= link_to "Create new cocktail", new_cocktail_path, class: "btn btn-danger"%>
+
+</div>
+<div class="wrapper cocktails-band">
+  <div class="container cocktails-band">
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-xs-6 col-sm-4 col-md-3">
+          <%= link_to cocktail_path(cocktail) do %>
+          <%= cl_image_tag cocktail.photo, height: 40, width: 40, crop: :fill %>
+            <div >
+              <h4><i class="fa fa-glass" aria-hidden="true"></i><%= cocktail.name.upcase %></h4>
+              <% cocktail.doses.each do |dose| %>
+                <%= dose.ingredient.name %>
+              <% end %>
+            </div>
+         <%end%>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <h3>Available ingredients:</h3>
+    <% Ingredient.all.each do |ingredient| %>
+    <%= ingredient.name %>
+    <% end %>
+  </div>
 </div>
 
-<%= link_to "Create new cocktail", new_cocktail_path, class: "btn btn-info"%>
-<hr>
-<div class="row">
-  <% @cocktails.each do |cocktail| %>
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <%= link_to cocktail_path(cocktail) do %>
-        <div >
-          <h4><i class="fa fa-glass" aria-hidden="true"></i><%= cocktail.name.upcase %></h4>
-          <% cocktail.doses.each do |dose| %>
-            <%= dose.ingredient.name %>
-          <% end %>
-        </div>
-     <%end%>
-    </div>
-  <% end %>
-</div>
-<div class="row">
-  <h3>Available ingredients:</h3>
-  <% Ingredient.all.each do |ingredient| %>
-  <%= ingredient.name %>
-  <% end %>
-</div>
+
 
