--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 </head>
 <body>
-  <%= render "shared/navbar" %>
-  <div class="container">
+  <%= render "shared/header" %>
+
     <%= yield %>
-  </div>
+
 </body>
 </html>
