--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,19 +4,18 @@
 
 </div>
 <div class="wrapper cocktails-band">
-  <div class="container cocktails-band">
+  <div class="container">
     <div class="row">
       <% @cocktails.each do |cocktail| %>
         <div class="col-xs-6 col-sm-4 col-md-3">
           <%= link_to cocktail_path(cocktail) do %>
-          <%= cl_image_tag cocktail.photo, height: 40, width: 40, crop: :fill %>
-            <div >
-              <h4><i class="fa fa-glass" aria-hidden="true"></i><%= cocktail.name.upcase %></h4>
+          <div class="card" style="background-image:linear-gradient(-225deg, rgba(255, 0, 0, 0.73) 0%, rgba(251, 0, 81, 0.68) 50%), url(<%=cocktail.photo%>)">
+              <h4><%= cocktail.name.upcase %></h4>
               <% cocktail.doses.each do |dose| %>
                 <%= dose.ingredient.name %>
               <% end %>
             </div>
-         <%end%>
+          <%end%>
         </div>
       <% end %>
     </div>
